# folketinget-sqlite3-mirror

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/.workflows/: docker-build-push.yml
.github/workflows/: docker-build-push.yml
migrations/: 01-create-tables.sql
src/: backup.rs  config.rs  main.rs  metrics.rs  scraper.rs
src/api/: documents.rs  mod.rs
