[package]
name = "folketinget-sqlite3-mirror"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
folketinget-api-models = { git = "https://github.com/Datavirke/folketinget-api-models", rev = "770adb5afcfeac0c273145291e0171f606f01dcb" }
odata-simple-client = { git = "https://github.com/Datavirke/odata-simple-client", rev = "955f5d3bba1a4fb2b089d9ac416a9827846a472f" }
hyper = "0.14.7"
hyper-openssl = "0.9.1"
tokio = { version = "1.6.0", features = [ "rt", "macros", "time" ]}
rusqlite = { version = "0.25.3", features = ["serde_json", "chrono"] }
rusqlite_migration = "0.4.2"
serde = "1.0.126"
serde_json = { version = "1.0.64" }
futures = { version = "0.3.15" }
chrono = "0.4.19"