[package]
name = "folketinget-sqlite3-mirror"
version = "0.1.2"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.6.0", features = [ "rt", "macros", "time", "signal" ]}
futures = { version = "0.3.15" }

# Scraping
folketinget-api-models = "0.2.0"
odata-simple-client = "0.2.2"
hyper = "0.14.7"
hyper-tls = "0.5.0"
governor = "0.3.2"
nonzero_ext = "0.3.0"

# Time and data conversion
chrono = "0.4.19"
chrono-tz = "0.6.0"
serde = "1.0.126"
serde_json = { version = "1.0.64" }

# Database access
rusqlite = { version = "0.26.1", features = ["serde_json", "chrono", "backup"] }
rusqlite_migration = "0.5.0"
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"

# Data serving
warp = "0.3.2"

[workspace]